--- a/webApp/templates/search.html
+++ b/webApp/templates/search.html
@@ -16,9 +16,13 @@
 <table class="table">
     <thread>
         <tr>
+            <th scope="col">PlayerID</th>
+            <th scope="col">Year</th>
             <th scope="col">Lastname</th>
             <th scope="col">Firstname</th>
-            <th scope="col">playerID</th>
+            <th scope="col">Season</th>
+            <th scope="col">Plate Appearances</th>
+            <th scope="col">Specialty Score</th>
         </tr>
     </thread>
     <tbody>
