Updated project text on website.

--- a/webApp/templates/layout.html
+++ b/webApp/templates/layout.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html >
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        TeX: {
+            equationNumbers: {  autoNumber: "AMS"  },
+            extensions: ["AMSmath.js", "AMSsymbols.js", "autobold.js", "color.js"]
+        }
+    });
+</script>
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
 <head>
     <meta charset="utf-8" />
@@ -23,18 +34,62 @@
     <hr size="300">
     <h4> About Specialty Score </h4>
     <p>
+        In sabermetrics, there are a variety of statistics used to evaluate the skill of a batter. Statistics such as batting average, slugging, on-base percentage, strikeouts, and other similar statistics evaluate the overall skill of a batter. None of these statistics consider a batter’s ability to hit varying types of pitches, just the batter’s ability to hit pitches as a whole. Some pitchers may be able to effectively hit all types of pitches, while others may only be able to be effective pitchers for fastballs. The Speciality Score statistic aims to gauge a batter’s ability to hit "speciality" pitches such as curveballs, sliders, changeups, and so on. Batters with high batting skill for these speciality pitches will have a high speciality score while batter with less skill for these pitches will have a lower speciality score. 
+    </p>
 
-    In sabermetrics, there are a variety of statistics used to evaluate the skill of a batter. Statistics such as batting average, slugging, on-base percentage, strikeouts, and other similar statistics evaluate the overall skill of a batter. None of these statistics consider a batter’s ability to hit varying types of pitches, just the batter’s ability to hit pitches as a whole. Some pitchers may be able to effectively hit all types of pitches, while others may only be able to be effective pitchers for fastballs. The Speciality Score statistic aims to gauge a batter’s ability to hit “speciality” pitches such as curveballs, sliders, changeups, and so on. Batters with high batting skill for these speciality pitches will have a high speciality score while batter with less skill for these pitches will have a lower speciality score. This statistic could be used to identify batters with a unique batting skill as compared to other batters.
+    <p>
+        This statistic could be used to identify batters with a unique batting skill as compared to other batters. A team manager could use this information to ensure that the team is well-balanced in terms of batting ability: a team needs batters that are able to excel against specialty pitches. Pitchers could also benefit from this information by using against batters with low specialty scores. If a pitcher is going to pitch to a batter who has a low specialty score, then he can throw specialty pitches to the batter. 
+    </p>
 
-    The statistic will be calculated using the Statcast data. For each batter, we will collect information about the pitches that they’ve hit. To determine information about the pitch, we will collect pitch type and pitch speed. To determine information about the batter’s hitting and how successful that hit was, we will collect batted ball launch speed, the resulting event of the plate appearance and launch speed/angle zone based on launch angle and exit velocity (which categorizes hits into one of the following types: weak, topped, under, flare/burner, solid contact, or barrel). We may also consider using the statcast data points Estimated Batting Avg based on launch angle and exit velocity, and Estimated wOBA based on launch angle and exit velocity.
-    
-    We will group the batter’s hits by pitch type. For each pitch type, we will use the batting information described above to determine how effective the hit was. This information will be aggregated together by pitch type and summed to give the player’s specialty score. Each pitch type will be weighted by some value such that pitches like curveballs, changeups, and sliders will be valued more than fastballs.
-    
-    The statistic will be presented with a website. A user will be able to access the website and read some information about the statistic and how it is calculated. A user will be able to enter a Major League Baseball player’s name and see his Specialty Score. The Specialty Scores will be available for all players that have enough Statcast data for which we can calculate their score.
+    <p>
+        The statistic is presented with a website: http://specialtyscore.herokuapp.com/. A user can access the website and read some information about the statistic and how it is calculated. A user can enter a Major League Baseball player’s name and see his Specialty Score. The Specialty Scores will be available for all players that have enough Statcast data for which we can calculate their score (AB > 200).
+    </p>
+
+    <h4>
+        Specialty Score Calculation
+    </h4>
+
+    <p>
+        To calculate the Specialty Score statistic we first needed to merge data across all available Statcast data that we could find. This consisted of the 2014 - 2018 batting data.
+    </p>
+
+    <p>
+        Afterwards, we removed all of the rows from the database where the pitch_type field contained a NaN value because if the pitch did not have a recorded pitch type the data was useless for our calculation. We then also had to do a bit of preprocessing on the pitch_type field itself by removing all values that contained a digit because there existed quite a few anomalous entries that looked similar to 2412_1214. To do this we first removed the "_" contained within these entries. We then iterated again over each value and removed each entry that was purely a digit, 2412_1214 becomes 24121214. This allowed us to just have the pitch types themselves which could be used for the Specialty Score calculation.
+    </p>
+
+    <p>
+        We then create another column called hit type that reads from the pitching description to determine if the ball was hit successfully. Essentially we have a conditional that checks if the description contains the word "hit" and the hit was not a ball or foul ball. This way we only measure the balls that were successfully hit. If the ball was successfully hit we then increment the successful hit counter with respect to the thrown pitch type for that batter.
+    </p>
+
+    <p>
+        After getting a count for the number of times that a player has seen each pitch type and the count for the number of successful hits we then begin to calculate the percentage of each pitch type that was successfully hit by each batter. This is simply done by just taking the total number of successfully hit balls for each pitch type and dividing it by the total number of times that the player saw and then multiplying by 100 to get a percentage.
+    </p>
+
+    <p>
+        The final calculation is what makes up the Specialty Score statistic itself. Each of the percentage hit calculations for each pitch type is passed through a weighted sum where,
+    </p>
+    <center>
+            \(
+                p = \{pitchType_1, pitchType_2, ..., pitchType_n\} 
+            \)
+    </center>
+
+    <center>
+        \(
+        w = \{w_1, w_2, ..., w_n\} \\
+        \)
+    </center>
+    <center>
+        \(
+        Specialty Score = \sum_{i=1}^{i=n} w_i * p_i
+        \)
+    </center>
+    <br>
+    <p>
+        What is great about the Specialty Score statistic is that the analyst of a team can work with their team manager and pitchers to adjust the weights of specialty pitches to come up with a Speciality Score that is more useful for their pitcher against some batter.    
     </p>
 
     <hr size="300">
-
 
     </div>
     <div class="container">
