Added spacing in latex.

--- a/webApp/templates/layout.html
+++ b/webApp/templates/layout.html
@@ -69,9 +69,9 @@
         The final calculation is what makes up the Specialty Score statistic itself. Each of the percentage hit calculations for each pitch type is passed through a weighted sum where,
     </p>
     <center>
-            \(
-                p = \{pitchType_1, pitchType_2, ..., pitchType_n\} 
-            \)
+        \(
+            p = \{pitchType_1, pitchType_2, ..., pitchType_n\} \\
+        \)
     </center>
 
     <center>
